change song page color from tomato to  primary

--- a/src/style/scss/components/button.scss
+++ b/src/style/scss/components/button.scss
@@ -84,7 +84,7 @@
     align-items: center;
 
     border-radius: 50%;
-    background-color: var.$color-tomato-red;
+    background-color: var.$color-primary;
     transition: all 1s ease;
 
     &::after {
