--- a/src/style/scss/song.scss
+++ b/src/style/scss/song.scss
@@ -60,6 +60,7 @@
       margin-right: 1rem;
 
       border-radius: 1rem;
+      border: 1px solid var.$color-primary;
       font-size: 1.3rem;
     }
   }
@@ -175,7 +176,7 @@
     }
 
     & ~ .song__tab__box > #song__lyrics__label {
-      border-color: var.$color-tomato-red;
+      border-color: var.$color-primary;
     }
   }
 }
@@ -191,7 +192,7 @@
     }
 
     & ~ .song__tab__box > #song__suggestion__label {
-      border-color: var.$color-tomato-red;
+      border-color: var.$color-primary;
     }
   }
 }
