--- a/src/style/scss/song.scss
+++ b/src/style/scss/song.scss
@@ -1,4 +1,3 @@
-@use 'sass:string';
 @use 'util/var';
 @use 'util/mixins';
 @use 'util/media';
@@ -42,7 +41,7 @@
     grid-area: image;
 
     border-radius: 50%;
-    box-shadow: 1px 5px 12px rgba(0, 0, 0, 0.322);
+    box-shadow: 1px 5px 12px #00000052;
     overflow: hidden;
     object-fit: cover;
   }
@@ -147,40 +146,6 @@
 
     @include media.query(32em) {
       column-count: 1;
-    }
-  }
-
-  &__suggestion {
-    &__list {
-      & > li {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        list-style: none;
-        align-items: center;
-        margin: 1rem auto;
-        & > a {
-          width: 50%;
-          display: flex;
-          flex-direction: row-reverse;
-          justify-content: space-between;
-          align-items: center;
-          text-decoration: none;
-          & > img {
-            width: 5rem;
-            height: auto;
-            border-radius: 0.5rem;
-          }
-          & > h3 {
-            text-decoration: none;
-            color: var.$color-text;
-          }
-          & > div {
-            text-decoration: none;
-            color: var.$color-text;
-          }
-        }
-      }
     }
   }
 }
