--- a/src/style/scss/components/audio.scss
+++ b/src/style/scss/components/audio.scss
@@ -1,226 +1,229 @@
 @import '../util/_var';
 
-.audio{
+.audio {
+  display: flex;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  height: 11rem;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 3rem;
+  background: #fff;
+  box-shadow: 0 0 1rem #00000032;
+  overflow: hidden;
+
+  &__container {
     width: 100%;
-    height: 11rem;
-    background-color: $background-color-audio;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    height: 6rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    @media only screen and (max-width: 800px) {
+      justify-content: center;
+    }
+  }
+
+  &__volume {
+    width: 20%;
+    display: flex;
+    height: 2rem;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
-    &__container{
-        width: 100%;
-        height: 6rem;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        @media only screen and (max-width:800px) {
-            justify-content: center;
-        }
-    }
-    &__volume{
-        width: 20%;
-        display: flex;
-        height: 2rem;
-        flex-direction: row-reverse;
-        justify-content: center;
-        align-items: center;
-        @media only screen and (max-width:800px) {
-            display: none;
-        }
-        & > button{
-            width: 1.2rem;
-            height: 1.2rem;
-            border: none;
-            background-color: transparent;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            & > input[type=checkbox]{
-                display: none;
-                &:checked ~ label>svg:nth-child(1){
-                    display: block;
-                }
-                &:checked ~ label>svg:nth-child(2){
-                    display: none;
-                }
-            }
-            & > label{
-                cursor: pointer;
-            }
-            &>label>svg{
-                width: 1.3rem;
-                height: 1.3rem;
-            }
-            &>label>svg:nth-child(1){
-                display: none;
-            }
-            &>label>svg:nth-child(2){
-                display: block;
-            }
-        }
-        & > div{
-            cursor: pointer;
-            background-color: rgba(255, 255, 255, 0.397);
-            display: flex;
-            justify-content: end;
-            width: 50%;
-            height: 0.4rem;
-            margin: 0 1rem;
-            & > span{
-                width: 30%;
-                background-color: black;
-                display: flex;
-                justify-content: start;
-                align-items: center;
-                &:hover{
-                    &::after{
-                        content: "";
-                        width: 1rem;
-                        height: 1rem;
-                        background-color: black;
-                        border-radius: 50%;
-                    }
-                }
-            }
-        }
-        
 
+    @media only screen and (max-width: 800px) {
+      display: none;
     }
-    &__actions{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 2.2rem;
-        & > button , & > label {
-            width: 3rem;
-            height: 3rem;
-            margin: auto 2rem;
-            border: 0;
-            background-color: transparent;
-            cursor: pointer;
-            & > svg{
-                width: 2rem;
-                height: 2rem;
-            }
-        }
-        & > label{
-            width: 5rem !important;
-            height: 5rem !important;
-            border-radius: 50%;
-            background-color:black !important;
-            padding-left: 0.3rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
 
-            &>svg{
-                fill:white;
-                &:nth-child(2){
-                    display: none;
-                }
-            }
-
+    & > button {
+      width: 1.2rem;
+      height: 1.2rem;
+      border: none;
+      background-color: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      & > input[type='checkbox'] {
+        display: none;
+        &:checked ~ label > svg:nth-child(1) {
+          display: block;
         }
-        & > input[type=checkbox]{
-            display: none;
-            &:checked ~ label>svg:nth-child(1){
-                display: none;
-            }
-            &:checked ~ label>svg:nth-child(2){
-                display: block;
-            }
-            &:checked ~ label{
-                padding-left: 0rem;
-            }
+        &:checked ~ label > svg:nth-child(2) {
+          display: none;
         }
-    }
-    &__info{
-        @media only screen and (max-width:800px) {
-            display: none;
-        }
-        width: 20%;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: end;
-        align-items: center; 
-        height: 11rem;
-        &>input[type=checkbox]{
-            display: none;
-            &:checked ~ label > svg{
-                fill: red !important;
-            }
-        }
-        &>img{
-            height: 100%;
-            max-height: 11rem;
-            width: auto;
-            margin-right: 2rem;
-        }
-        &>label{
-            width: 2rem;
-            height: 2rem;
-            border: none;
-            background-color: transparent;
-            cursor: pointer;
-            &>svg{
-                width: 1.5rem;
-                height: 1.5rem;
-            }
-        }
-    }
-    &__timeline{
-        width: 35%;
-        height: 0.3rem;
-        background-color: rgba(255, 255, 255, 0.397);
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+      }
+      & > label {
         cursor: pointer;
-        @media only screen and (max-width:800px) {
-            width: 60%;
-        }
-        @media only screen and (max-width:500px) {
-            width: 80%;
-        }
-        &::after , &::before{
-            content: "0:0";
-            font-size: 2rem;
-            color: black;
-            background-color: $background-color-audio;
-            padding: 0 1.5rem;
-            z-index: 10;
-            cursor: default;
-        }
-        & > span{
-            background-color: black;
-            width: 50%;
-            height: 100%;
-            margin-right: auto;
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            &:hover{
-                &::after{
-                    content: "";
-                    width: 1rem;
-                    height: 1rem;
-                    background-color: black;
-                    border-radius: 50%;
-                }
-            }
-        }
+      }
+      & > label > svg {
+        width: 1.3rem;
+        height: 1.3rem;
+      }
+      & > label > svg:nth-child(1) {
+        display: none;
+      }
+      & > label > svg:nth-child(2) {
+        display: block;
+      }
     }
-}
+    & > div {
+      cursor: pointer;
+      background-color: #c4c4c465;
+      display: flex;
+      justify-content: end;
+      width: 50%;
+      height: 0.4rem;
+      margin: 0 1rem;
+      
+      & > span {
+        margin-right: auto;
+        width: 30%;
+        background-color: black;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        &:hover {
+          &::after {
+            content: '';
+            width: 1rem;
+            height: 1rem;
+            background-color: black;
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+  }
+  &__actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2.2rem;
+    & > button,
+    & > label {
+      width: 3rem;
+      height: 3rem;
+      margin: auto 2rem;
+      border: 0;
+      background-color: transparent;
+      cursor: pointer;
+      & > svg {
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+    & > label {
+      width: 5rem !important;
+      height: 5rem !important;
+      border-radius: 50%;
+      background-color: black !important;
+      padding-left: 0.3rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-.footer{
-    margin-bottom: 12rem;
+      & > svg {
+        fill: white;
+        &:nth-child(2) {
+          display: none;
+        }
+      }
+    }
+    & > input[type='checkbox'] {
+      display: none;
+      &:checked ~ label > svg:nth-child(1) {
+        display: none;
+      }
+      &:checked ~ label > svg:nth-child(2) {
+        display: block;
+      }
+      &:checked ~ label {
+        padding-left: 0rem;
+      }
+    }
+  }
+  &__info {
+    @media only screen and (max-width: 800px) {
+      display: none;
+    }
+    width: 20%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    align-items: center;
+    height: 11rem;
+    & > input[type='checkbox'] {
+      display: none;
+      &:checked ~ label > svg {
+        fill: red !important;
+      }
+    }
+    & > img {
+      display: block;
+      width: 100%;
+      margin-right: 2rem;
+    }
+    & > label {
+      width: 2rem;
+      height: 2rem;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      & > svg {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+    }
+  }
+  &__timeline {
+    width: 35%;
+    height: 0.3rem;
+    background-color: #c4c4c465;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    @media only screen and (max-width: 800px) {
+      width: 60%;
+    }
+    @media only screen and (max-width: 500px) {
+      width: 80%;
+    }
+    &::after,
+    &::before {
+      content: '0:0';
+      font-size: 2rem;
+      color: black;
+      background-color: #fff;
+      padding: 0 1.5rem;
+      z-index: 10;
+      cursor: default;
+    }
+    & > span {
+      background-color: black;
+      width: 50%;
+      height: 100%;
+      margin-right: auto;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      &:hover {
+        &::after {
+          content: '';
+          width: 1rem;
+          height: 1rem;
+          background-color: black;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
 }
