fix autofill input wrong style

--- a/src/style/scss/components/_form-field.scss
+++ b/src/style/scss/components/_form-field.scss
@@ -51,7 +51,8 @@ $font-size-small: 1.2rem;
 
     transition: all 0.3s ease;
 
-    &:focus {
+    &:focus,
+    &:-webkit-autofill {
       @extend %active__input;
 
       & + .form__field__label {
