--- a/src/style/scss/form.scss
+++ b/src/style/scss/form.scss
@@ -1,7 +1,7 @@
 @use 'components/form-field';
 
 body {
-  background: url('../../assets/image/background.jpg');
+  background: linear-gradient(45deg, #ffcf00, rgb(255, 136, 0));
   background-position: right;
   background-size: cover;
 }
@@ -22,9 +22,20 @@ main {
   max-width: 450px;
 
   border-radius: 2rem;
-  background-color: #dadfffbf;
+  background-color: #fff;
   backdrop-filter: blur(8px);
   box-shadow: 0 0.1rem 2rem 0.4rem #00000045;
+
+  &__logo {
+    width: 10rem;
+    margin: 0.2rem auto;
+    display: block;
+
+    & > img {
+      padding-left: 2rem;
+      width: 100%;
+    }
+  }
 
   &__box {
     display: flex;
