--- a/src/style/scss/song-list.scss
+++ b/src/style/scss/song-list.scss
@@ -1,204 +1,85 @@
-@use 'util/var';
 @use 'util/mixins';
-@use 'util/media';
+@use 'util/var';
 
-.song {
-  $image-size: 15rem;
+main {
+  @include mixins.round-section();
+  padding: 1.5rem 0;
+}
 
-  &__container {
-    margin-top: 10rem !important;
-
-    overflow: visible !important;
-
-    @include mixins.round-section();
-
-    @include media.query(phone) {
-      margin-top: 15rem !important;
-    }
+.music__section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  &__duration {
+    text-decoration: none;
+    font-size: 1.2rem;
   }
-
-  &__info {
-    display: grid;
-    grid-template-columns: min-content 1fr max-content;
-    grid-template-rows: 1fr repeat(3, min-content);
-    grid-template-areas:
-      'image . .'
-      'image name actions'
-      'image singer .'
-      'image follow .';
-
-    gap: 0 2rem;
-    padding: 0 4rem;
-
-    transform: translateY(-6.9rem);
-
-    @include media.query(phone) {
-      grid-template-columns: 1fr;
-      grid-template-areas:
-        'image'
-        'name'
-        'singer'
-        'follow'
-        'actions';
-
-      justify-items: center;
-    }
-  }
-
-  &__image {
-    display: block;
-    width: $image-size;
-    height: $image-size;
-    grid-area: image;
-
-    border-radius: 50%;
-    box-shadow: 1px 5px 12px #00000052;
-    overflow: hidden;
-    object-fit: cover;
-  }
-
   &__name {
-    display: flex;
-    align-items: center;
-    grid-area: name;
-
-    font-size: 3rem;
-    font-weight: 400;
-
-    & > small {
-      padding: 0.1rem 1rem;
-      margin-right: 1rem;
-
-      border-radius: 1rem;
-      border: 1px solid var.$color-primary;
-      font-size: 1.3rem;
-    }
+    font-size: 1.6rem;
+    font-weight: bolder;
   }
-
   &__singer {
-    grid-area: singer;
-
-    font-size: 1.7rem;
-    font-weight: 400;
+    font-size: 1.3rem;
   }
-
-  &__follow {
-    margin-top: 1rem;
-    grid-area: follow;
-    justify-self: start;
-
-    font-size: 1rem;
-
-    @include media.query(phone) {
-      justify-self: center;
-      margin: 1rem 0px;
-    }
-  }
-
-  &__actions {
+  & > div:nth-child(1) {
     display: flex;
-    grid-area: actions;
-    align-self: end;
-
-    & > button {
-      margin-left: 1rem;
-
-      &:last-child {
-        margin-left: 0;
-      }
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    & > h2 {
+      font-size: 1.8em;
+      margin-right: 2rem;
+      color: black;
+    }
+    & > a {
+      text-decoration: none;
+      color: black;
+      margin-left: 1.7rem;
     }
   }
+  & > div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    margin: 0.7rem 0 4rem 0;
 
-  &__tab {
-    display: none;
-
-    &__box {
+    & > a {
+      border-radius: 2rem 2rem 0.5rem 0.5rem;
+      width: 13%;
+      min-width: 15rem;
+      text-decoration: none;
       display: flex;
-      margin-bottom: 2rem;
-      padding-bottom: 1rem;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-
-      border-bottom: 2px dashed rgba(0, 0, 0, 0.411);
-    }
-
-    &__label {
-      margin: 0 0.5rem;
-      padding: 0.1rem 1rem;
-
-      border: 1px solid transparent;
-      border-radius: 1rem;
-
+      overflow: hidden;
+      padding-bottom: 1rem;
+      margin: auto 1rem;
+      transition: 0.3s all ease;
       color: black;
-      background-color: transparent;
-      font-size: 1.4rem;
+      box-shadow: 0 0 10px #25252563;
 
-      transition: 0.2s all ease;
+      &:hover {
+        transform: scale(1.1);
+        height: auto;
+        color: var.$color-primary;
+      }
 
-      cursor: pointer;
-    }
-  }
+      & > * {
+        color: inherit;
+        margin: 0.2rem auto;
+      }
 
-  &__lyrics {
-    margin: 0 auto;
-    padding: 0 4rem;
-    max-width: 120rem;
-
-    column-count: 4;
-    column-gap: 2rem;
-
-    font-size: 1.4rem;
-    text-align: center;
-    line-height: 1.7;
-    list-style: none;
-
-    @include media.query(tablet) {
-      column-count: 3;
-    }
-
-    @include media.query(phone) {
-      column-count: 2;
-    }
-
-    @include media.query(32em) {
-      column-count: 1;
-    }
-  }
-
-  &__lyrics,
-  &__suggestion {
-    padding-bottom: 4rem;
-  }
-}
-
-#lyrics {
-  & ~ .song__lyrics {
-    display: none;
-  }
-
-  &:checked {
-    & ~ .song__lyrics {
-      display: block;
-    }
-
-    & ~ .song__tab__box > #song__lyrics__label {
-      border-color: var.$color-primary;
-    }
-  }
-}
-
-#suggestion {
-  & ~ .song__suggestion {
-    display: none;
-  }
-
-  &:checked {
-    & ~ .song__suggestion {
-      display: block;
-    }
-
-    & ~ .song__tab__box > #song__suggestion__label {
-      border-color: var.$color-primary;
+      & > img {
+        width: 100%;
+        height: auto;
+        border-radius: 2rem;
+        display: block;
+      }
     }
   }
 }
