--- a/src/style/scss/user.scss
+++ b/src/style/scss/user.scss
@@ -7,79 +7,79 @@ body {
   background: none !important;
 }
 
-.hidden__desktop {
-  display: none !important;
-}
-main {
+.main {
   @include mixins.round-section();
   min-height: auto !important;
   padding-bottom: 5rem !important;
-  & > section {
-    width: 100%;
-    margin: 1rem 0;
+}
+
+.form__update {
+  width: 100%;
+
+  &__container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
+    margin: 3rem 0;
+
     @include media.query(tablet) {
       flex-direction: column;
       justify-content: center;
     }
-  }
-  & > section:nth-child(1) {
-    @include media.query(tablet) {
-      display: none !important;
-    }
-  }
-  & > section:nth-child(2) {
-    @include media.query(tablet) {
-      display: flex !important;
-    }
-  }
-  & > section:nth-child(1),
-  & > section:nth-child(2) {
-    & > input[type='file'] {
-      display: none;
-    }
 
-    & > svg {
-      width: 20rem;
-      height: 20rem;
-      transition: 0.1s all ease;
-      cursor: pointer;
-      margin: 3rem;
-
-      &:hover {
-        filter: grayscale(1);
-      }
-    }
-
-    & > div {
-      flex-grow: 2;
+    &--user-image {
       display: flex;
-      flex-direction: column;
+      justify-content: flex-end;
       align-items: center;
-      justify-content: center;
+      flex-grow: 0.3;
+      & > img {
+        border-radius: 50%;
+        width: 15rem;
+        height: 15rem;
+        cursor: pointer;
 
-      & > div {
-        width: 80% !important;
+        &:hover {
+          filter: grayscale(1);
+        }
       }
     }
 
-    & > a {
-      flex-grow: 2;
+    &--input {
+      flex-grow: 1;
       display: flex;
-      @include media.query(tablet) {
-        padding-right: 3rem;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      margin: 0 8rem;
+    }
+
+    &--radio {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      & > input {
+        margin: 0 1rem;
+        cursor: pointer;
       }
-      & > img {
-        width: 10rem;
-        height: 10rem;
-        margin: 0 auto 0 5rem;
+      & > label {
+        cursor: pointer;
+        font-size: 1.4em;
       }
     }
   }
-  & > section:nth-child(3) {
+}
+#avatar__input {
+  display: none;
+}
+#label_birthday {
+  transform: translateY(calc(-50% - 0.7rem)) !important;
+}
+
+main {
+  & > section:nth-child(2) {
     display: flex;
     flex-wrap: wrap;
     & > div:nth-child(1),
@@ -92,7 +92,7 @@ main {
         font-size: 1.5em;
       }
     }
-    & > div:nth-child(3) {
+    & > div:nth-child(2) {
       flex-grow: 1;
       display: flex;
       justify-content: center;
@@ -106,7 +106,7 @@ main {
         }
       }
     }
-    & > div:nth-child(4) {
+    & > div:nth-child(3) {
       flex-grow: 1;
       margin: 0 6.5rem 0 auto;
       display: flex;
@@ -115,7 +115,7 @@ main {
       margin: 1rem auto;
     }
   }
-  & > section:nth-child(4) {
+  & > section:nth-child(3) {
     justify-content: center !important;
   }
 }
