--- a/src/style/scss/song-list.scss
+++ b/src/style/scss/song-list.scss
@@ -2,84 +2,92 @@
 @use 'util/var';
 
 main {
+  padding: 2rem;
+
   @include mixins.round-section();
-  padding: 1.5rem 0;
 }
 
-.music__section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  &__duration {
-    text-decoration: none;
-    font-size: 1.2rem;
-  }
-  &__name {
-    font-size: 1.6rem;
-    font-weight: bolder;
-  }
-  &__singer {
-    font-size: 1.3rem;
-  }
-  & > div:nth-child(1) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    & > h2 {
-      font-size: 1.8em;
-      margin-right: 2rem;
-      color: black;
-    }
-    & > a {
-      text-decoration: none;
-      color: black;
-      margin-left: 1.7rem;
-    }
-  }
-  & > div:nth-child(2) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    margin: 0.7rem 0 4rem 0;
+.song {
+  &__gener {
+    margin-bottom: 8rem;
 
-    & > a {
-      border-radius: 2rem 2rem 0.5rem 0.5rem;
-      width: 13%;
-      min-width: 15rem;
-      text-decoration: none;
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &__header {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      align-items: baseline;
+    }
+
+    &__name {
+      margin: 0 1.5rem 0 auto;
+
+      font-size: 3rem;
+      font-weight: 400;
+    }
+
+    &__container {
+      display: flex;
+      padding: 2rem 0;
+
+      list-style: none;
+      overflow-x: auto;
+    }
+  }
+
+  &__item {
+    display: block;
+    position: relative;
+
+    color: var.$color-text;
+
+    border: none;
+    outline: none;
+    text-decoration: none;
+
+    &__box {
+      margin: 0 1rem;
+      flex: 0 0 20rem;
+
+      border-radius: 2rem;
+      box-shadow: 0 0 2rem #25252563;
       overflow: hidden;
-      padding-bottom: 1rem;
-      margin: auto 1rem;
-      transition: 0.3s all ease;
-      color: black;
-      box-shadow: 0 0 10px #25252563;
 
-      &:hover {
-        transform: scale(1.1);
-        height: auto;
-        color: var.$color-primary;
+      &:first-child {
+        margin-right: 2rem;
       }
 
-      & > * {
-        color: inherit;
-        margin: 0.2rem auto;
+      &:last-child {
+        margin-left: 2rem;
       }
+    }
 
-      & > img {
-        width: 100%;
-        height: auto;
-        border-radius: 2rem;
-        display: block;
-      }
+    &__image {
+      display: block;
+      width: 100%;
+      height: 20rem;
+      object-fit: cover;
+    }
+
+    &__info {
+      position: absolute;
+      width: 100%;
+      padding: 2rem 1rem 1rem 1rem;
+      bottom: 0;
+      right: 0;
+
+      color: #fff;
+      background: linear-gradient(0deg, #000, 60%, transparent);
+    }
+
+    &__name {
+      font-size: 2rem;
+      font-weight: 400;
+    }
+
+    &__singer{
+      font-size: 1.3rem;
     }
   }
 }
