play-listd js added and connected to server

--- a/src/style/scss/components/song-item.scss
+++ b/src/style/scss/components/song-item.scss
@@ -50,9 +50,17 @@
     font-size: 1.3rem;
   }
 
-  &__duration {
+  &__delete {
     margin-right: auto;
 
-    font-size: 1.3rem;
+    & > svg {
+      width: 2rem;
+      height: 2rem;
+      transition: 0.1s all ease;
+      &:hover {
+        transform: scale(1.1);
+        fill: red;
+      }
+    }
   }
 }
