--- a/src/style/scss/components/song-item.scss
+++ b/src/style/scss/components/song-item.scss
@@ -1,58 +1,124 @@
 @use '../util/var';
 
-.song__item {
-  display: flex;
-  align-items: center;
+.song {
+  &__item {
+    display: flex;
+    align-items: center;
 
-  color: var.$color-text;
-  text-decoration: none;
+    color: var.$color-text;
+    text-decoration: none;
 
-  &__list {
-    padding: 0 4rem;
+    &__list {
+      padding: 0 4rem;
 
-    list-style: none;
+      list-style: none;
 
-    li {
-      margin: 2rem 0;
-      padding: 1rem;
+      li {
+        margin: 2rem 0;
+        padding: 1rem;
 
-      border-radius: 1rem;
+        border-radius: 1rem;
 
-      background: var.$background-color;
-      box-shadow: 0 0 1.5rem #00000010;
-      transition: all 0.3s ease;
+        background: var.$background-color;
+        box-shadow: 0 0 1.5rem #00000010;
+        transition: all 0.3s ease;
 
-      &:hover {
-        background: darken(var.$background-color, 10);
+        &:hover {
+          background: darken(var.$background-color, 10);
+        }
       }
+    }
+
+    &__image {
+      display: block;
+      margin-left: 2rem;
+      width: 6rem;
+      height: 6rem;
+
+      border-radius: 50%;
+      box-shadow: 0 0 1rem #00000052;
+      overflow: hidden;
+    }
+
+    &__name {
+      margin-left: 1rem;
+
+      font-size: 1.7rem;
+      font-weight: 400;
+    }
+
+    &__singer {
+      font-size: 1.3rem;
+    }
+
+    &__duration {
+      margin-right: auto;
+
+      font-size: 1.3rem;
     }
   }
 
-  &__image {
+  &__unit {
     display: block;
-    margin-left: 2rem;
-    width: 6rem;
-    height: 6rem;
+    position: relative;
 
-    border-radius: 50%;
-    box-shadow: 0 0 1rem #00000052;
-    overflow: hidden;
-  }
+    color: var.$color-text;
 
-  &__name {
-    margin-left: 1rem;
+    border: none;
+    outline: none;
+    text-decoration: none;
 
-    font-size: 1.7rem;
-    font-weight: 400;
-  }
+    &__box {
+      margin: 0 1rem;
+      flex: 0 0 20rem;
 
-  &__singer {
-    font-size: 1.3rem;
-  }
+      border-radius: 2rem;
+      box-shadow: 0 0 2rem #25252563;
+      overflow: hidden;
 
-  &__duration {
-    margin-right: auto;
+      &:first-child {
+        margin-right: 2rem;
+      }
 
-    font-size: 1.3rem;
+      &:last-child {
+        margin-left: 2rem;
+      }
+    }
+
+    &__image {
+      display: block;
+      width: 100%;
+      height: 20rem;
+      object-fit: cover;
+    }
+
+    &__info {
+      position: absolute;
+      width: 100%;
+      padding: 2rem 1rem 1rem 1rem;
+      bottom: 0;
+      right: 0;
+
+      color: #fff;
+      background: linear-gradient(0deg, #000, 60%, transparent);
+
+      transition: all 0.3s ease;
+    }
+
+    &__name {
+      font-size: 2em;
+      font-weight: 400;
+    }
+
+    &__singer {
+      font-size: 1.3em;
+    }
+
+    &:hover &,
+    &:focus & {
+      &__info {
+        padding-bottom: 4rem;
+      }
+    }
   }
 }
