--- a/src/style/scss/song-list.scss
+++ b/src/style/scss/song-list.scss
@@ -37,4 +37,19 @@ main {
       @include mixins.scrollbar();
     }
   }
+
+  &__unit {
+    &__box {
+      margin: 0 1rem;
+      flex: 0 0 20rem;
+
+      &:first-child {
+        margin-right: 2rem;
+      }
+
+      &:last-child {
+        margin-left: 2rem;
+      }
+    }
+  }
 }
