--- a/src/style/scss/play-list.scss
+++ b/src/style/scss/play-list.scss
@@ -81,45 +81,46 @@ main {
 }
 
 details {
-  width: 50%;
   margin: 0 auto;
   margin-bottom: 2rem;
   padding: 0 2rem;
-  box-shadow: 0 0.2rem 1.3rem -0.5rem rgba(0, 0, 0, 0.4);
-  border-radius: 2rem;
-  overflow: hidden;
   width: 100%;
-  background-color: white;
+
+  border-radius: 2rem;
+  box-shadow: 0 0 1.5rem 1px #00000040;
+  overflow: hidden;
 
   &[open] > summary:before {
-    transform: rotate(90deg);
+    transform: translateY(-50%) rotate(-90deg);
   }
 
   & > ul {
     padding-bottom: 1rem;
-    margin-bottom: 0;
   }
 }
 
 summary {
-  padding: 1rem;
   display: block;
-  padding-left: 2.2rem;
   position: relative;
-  cursor: pointer;
-  font-size: 2rem;
+  padding: 1rem 2rem;
+
   color: black;
+  font-size: 2rem;
+
+  cursor: pointer;
 
   &:before {
     content: '';
+    position: absolute;
+    top: 50%;
+    right: 0;
+
     border-width: 0.4rem;
     border-style: solid;
-    border-color: transparent transparent transparent #fff;
-    position: absolute;
-    top: 1.3rem;
-    left: 1rem;
-    transform: rotate(0);
-    transform-origin: 0.2rem 50%;
+    border-color: transparent var.$color-text transparent transparent;
+
+    transform: translateY(-50%) rotate(0);
+    transform-origin: 0.4rem 50%;
     transition: 0.25s transform ease;
   }
 }
