--- a/src/style/scss/play-list.scss
+++ b/src/style/scss/play-list.scss
@@ -45,6 +45,8 @@ main {
 
     color: #fff;
     background-color: var.$color-primary;
+    background-size: cover;
+    background-position: center center;
     font-size: 5rem;
   }
 
@@ -80,7 +82,9 @@ details {
 }
 
 summary {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   position: relative;
   padding: 1rem 2rem;
@@ -107,9 +111,15 @@ summary {
 }
 
 .delete-song-container {
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   & > svg {
-    width: 2rem;
-    height: 2rem;
+    width: 100%;
+    height: 100%;
 
     transition: 0.2s all ease;
 
