show currentTime fix change time problem

--- a/src/style/scss/components/audio.scss
+++ b/src/style/scss/components/audio.scss
@@ -198,7 +198,7 @@
       cursor: default;
     }
     &::after {
-      content: '0:0';
+      content: attr(data-current-time);
     }
     &::before {
       content: attr(data-duration);
