--- a/src/app/components/song-card/song-card.component.html
+++ b/src/app/components/song-card/song-card.component.html
@@ -1,4 +1,4 @@
-<a class="song__card" routerLink="song/{{ id }}">
+<a class="song__card" routerLink="/song/{{ id }}">
   <img class="song__card__cover" [src]="cover" [alt]="name" loading="lazy" />
   <div class="song__card__info">
     <h3 class="song__card__name">{{ name }}</h3>
