use round layout in genres page

--- a/src/app/pages/genres/genres.component.html
+++ b/src/app/pages/genres/genres.component.html
@@ -1,5 +1,8 @@
-<app-genre
-  *ngFor="let genre of genres$ | async"
-  [name]="genre.genre"
-  [songs]="genre.songs"
-></app-genre>
+<layout-round>
+  <app-genre
+    *ngFor="let genre of genres$ | async"
+    [name]="genre.genre"
+    [songs]="genre.songs"
+  >
+  </app-genre>
+</layout-round>
