--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <nav class="nav">
   <ul class="nav__link__box">
     <li>
-      <a class="nav__link button--inline" href="./sign-up.html"> ثبت نام </a>
+      <a class="nav__link--home nav__link" href="./index.html">
+        <img src="../assets/image/favicon.png" alt="آهنگیفای" />
+        <span class="button--inline">آهنگیفای</span>
+      </a>
     </li>
-    <li>
-      <a class="nav__link button--inline" href="./login.html"> ورود </a>
-    </li>
+
     <li>
       <a class="nav__link button--inline" href="./song-list.html"> آهنگ ها </a>
     </li>
@@ -13,6 +14,20 @@
       <a class="nav__link button--inline" href="./play-list.html">
         علاقه مندی ها
       </a>
+    </li>
+
+    <li class="nav__auth__box">
+      <a class="nav__link button--inline" href="./sign-up.html"> ثبت نام </a>
+      <a class="nav__link button--inline" href="./login.html">ورود</a>
+    </li>
+
+    <li class="nav__user__box">
+      <a class="nav__user" href="./user.html">
+        <div class="nav__user__image"></div>
+        <div class="nav__user__name"></div>
+      </a>
+
+      <button class="nav__logout">خروج</button>
     </li>
   </ul>
 
